Add: add tab & fix html rework

--- a/book.html
+++ b/book.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Bibliothèques de la Ville de Paris - Accueil</title>
+    <title>Bibliothèques de la Ville de Paris - Chaperon rouge</title>
 </head>
 <body>
 <header>
@@ -53,16 +53,50 @@
         <h1>CHAPERON ROUGE - Danijel Žeželj></h1>
     </section>
     <section>
-        <p>Livre</p>
-        <h3>Résumé :</h3>
-        <p>A la demande de sa mère, le Petit Chaperon rouge porte une galette et un petit pot de beurre à sa grand-mère malade. En chemin, elle rencontre le loup. Une adaptation du conte classique illustrée à l'encre de Chine, et sans parole.</p>
-        <h3>Auteur :</h3>
-        <p>Danijel Žeželj (1966-....) </p>
-        <h3>Editeur :</h3>
-        <p>Mosquito</p>
-        <h3>Date :</h3>
-        <p>2015</p>
-        <
+        <div>
+            <img src="./images/chaperon.png" alt="Livre du chaperon rouge">
+        </div>
+        <div>
+            <p>Livre</p>
+            <h3>Résumé</h3>
+            <p> : A la demande de sa mère, le Petit Chaperon rouge porte une galette et un petit pot de beurre à sa grand-mère malade. En chemin, elle rencontre le loup. Une adaptation du conte classique illustrée à l'encre de Chine, et sans parole.</p>
+            <h3>Auteur</h3>
+            <p> : Danijel Žeželj (1966-....) </p>
+            <h3>Editeur</h3>
+            <p> : Mosquito</p>
+            <h3>Date</h3>
+            <p> : 2015</p>
+            <h3>Langue</h3>
+            <p> : Français (traduit du croate)</p>
+            <h3>Genre</h3>
+            <p> : Fiction, roman</p>
+            <h3>ISBN</h3>
+            <p> : 978-2-35283-290-4 </p>
+            <h3>Avis des lecteurs</h3>
+            <p> : 4,2/5 (17 avis)</p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h2>Dans quelle bibliothèque retrouver le livre ?</h2>
+        </div>
+    </section>
+    <section>
+        <h2>Suggestions</h2>
+        <p>Du même auteur</p>
+        <a href="/">
+            <img alt="Livre du chaperon rouge" src="./images/chaperon.png">
+            <div>
+                <div>
+                    <span>Livre</span>
+                    <h3>Chaperon Rouge</h3>
+                    <h4>Danijel Žeželj</h4>
+                    <p>Edition Mosquito</p>
+                    <p>2015</p>
+                </div>
+                <p>3 disponibles</p>
+            </div>
+        </a>
     </section>
 </main>
 <footer>
