--- a/resultat.html
+++ b/resultat.html
@@ -179,7 +179,7 @@
             <ul>
                 <li>
                     <a href="/">
-                        <img alt="Livre" src="./images/chaperon.png">
+                        <img alt="Livre du chaperon rouge" src="./images/chaperon.png">
                         <div>
                             <div>
                                 <span>Livre</span>
@@ -194,7 +194,7 @@
                 </li>
                 <li>
                     <a href="/">
-                        <img alt="Livre" src="./images/chaperon.png">
+                        <img alt="Livre du chaperon rouge" src="./images/chaperon.png">
                         <div>
                             <div>
                                 <span>Livre</span>
@@ -209,7 +209,7 @@
                 </li>
                 <li>
                     <a href="/">
-                        <img alt="Livre" src="./images/chaperon.png">
+                        <img alt="Livre du chaperon rouge" src="./images/chaperon.png">
                         <div>
                             <div>
                                 <span>Livre</span>
@@ -224,7 +224,7 @@
                 </li>
                 <li>
                     <a href="/">
-                        <img alt="Livre" src="./images/chaperon.png">
+                        <img alt="Livre du chaperon rouge" src="./images/chaperon.png">
                         <div>
                             <div>
                                 <span>Livre</span>
@@ -239,7 +239,7 @@
                 </li>
                 <li>
                     <a href="/">
-                        <img alt="Livre" src="./images/chaperon.png">
+                        <img alt="Livre du chaperon rouge" src="./images/chaperon.png">
                         <div>
                             <div>
                                 <span>Livre</span>
@@ -254,7 +254,7 @@
                 </li>
                 <li>
                     <a href="/">
-                        <img alt="Livre" src="./images/chaperon.png">
+                        <img alt="Livre du chaperon rouge" src="./images/chaperon.png">
                         <div>
                             <div>
                                 <span>Livre</span>
@@ -332,41 +332,77 @@
                 <li>
                     <a href="https://bibliotheques.paris.fr/jeunesse/">Jeunesse</a>
                 </li>
-                <li><a href="https://bibliotheques-specialisees.paris.fr/">Collections patrimoines</a></li>
-                <li><a href="https://bibliotheques.paris.fr/numerique/">Bibliothèque numérique</a></li>
+                <li>
+                    <a href="https://bibliotheques-specialisees.paris.fr/">Collections patrimoines</a>
+                </li>
+                <li>
+                    <a href="https://bibliotheques.paris.fr/numerique/">Bibliothèque numérique</a>
+                </li>
             </ul>
         </div>
         <h4>Les + consultés</h4>
         <ul>
-            <li><a href="https://bibliotheques.paris.fr/les-nouveautes-du-catalogue.aspx">Les nouveautés</a></li>
-            <li><a href="https://bibliotheques.paris.fr/">Les coups de coeurs</a></li>
-            <li><a href="https://bibliotheques.paris.fr/les-horaires.aspx">Horaires et fermetures</a></li>
-            <li><a href="https://bibliotheques.paris.fr/nos-selections.aspx">Nos sélections thématiques</a></li>
-            <li><a href="https://bibliotheques.paris.fr/numok/">Numok</a></li>
-            <li><a href="https://bibliotheques.paris.fr/vos-derniers-commentaires.aspx">Vos derniers commentaires</a>
+            <li>
+                <a href="https://bibliotheques.paris.fr/les-nouveautes-du-catalogue.aspx">Les nouveautés</a>
+            </li>
+            <li>
+                <a href="https://bibliotheques.paris.fr/">Les coups de coeurs</a>
+            </li>
+            <li>
+                <a href="https://bibliotheques.paris.fr/les-horaires.aspx">Horaires et fermetures</a>
+            </li>
+            <li>
+                <a href="https://bibliotheques.paris.fr/nos-selections.aspx">Nos sélections thématiques</a>
+            </li>
+            <li>
+                <a href="https://bibliotheques.paris.fr/numok/">Numok</a>
+            </li>
+            <li>
+                <a href="https://bibliotheques.paris.fr/vos-derniers-commentaires.aspx">Vos derniers commentaires</a>
             </li>
         </ul>
         <div>
             <h4>Informations</h4>
             <ul>
-                <li><a href="https://bibliotheques.paris.fr/faq.aspx">FAQ</a></li>
-                <li><a href="https://sollicitations.paris.fr/ticketing/jsp/site/Portal.jsp?page=mylutece&action=login">Contactez-nous</a>
+                <li>
+                    <a href="https://bibliotheques.paris.fr/faq.aspx">FAQ</a>
                 </li>
-                <li><a href="https://bibliotheques.paris.fr/eurekoi.aspx">Eurekoi : posez vos questions</a></li>
-                <li><a href="https://bibliotheques.paris.fr/agenda/envue.aspx">Magazine EnVue</a></li>
-                <li><a href="https://bibliotheques.paris.fr/des-bibliotheques-accessibles.aspx">Bibliothèques
-                    accessibles</a></li>
-                <li><a href="">Conservatoire de la ville de Paris</a></li>
-                <li><a href="https://bibliotheques.paris.fr/english-read-our-tutorial.aspx">Foreign in Paris?</a></li>
+                <li>
+                    <a href="https://sollicitations.paris.fr/ticketing/jsp/site/Portal.jsp?page=mylutece&action=login">Contactez-nous</a>
+                </li>
+                <li>
+                    <a href="https://bibliotheques.paris.fr/eurekoi.aspx">Eurekoi : posez vos questions</a>
+                </li>
+                <li>
+                    <a href="https://bibliotheques.paris.fr/agenda/envue.aspx">Magazine EnVue</a>
+                </li>
+                <li>
+                    <a href="https://bibliotheques.paris.fr/des-bibliotheques-accessibles.aspx">Bibliothèques
+                    accessibles</a>
+                </li>
+                <li>
+                    <a href="">Conservatoire de la ville de Paris</a>
+                </li>
+                <li>
+                    <a href="https://bibliotheques.paris.fr/english-read-our-tutorial.aspx">Foreign in Paris?</a>
+                </li>
             </ul>
         </div>
     </div>
     <div>
         <ul>
-            <li><a href="https://bibliotheques.paris.fr/mentions-legales.aspx">Mentions légales</a></li>
-            <li><a href="https://bibliotheques.paris.fr/declaration-daccessibilite.aspx">Accessibilité</a></li>
-            <li><a href="https://bibliotheques.paris.fr/donnees-personnelles.aspx">Données personnelles</a></li>
-            <li><a href="https://bibliotheques.paris.fr/plan-du-site.aspx">Plan du site</a></li>
+            <li>
+                <a href="https://bibliotheques.paris.fr/mentions-legales.aspx">Mentions légales</a>
+            </li>
+            <li>
+                <a href="https://bibliotheques.paris.fr/declaration-daccessibilite.aspx">Accessibilité</a>
+            </li>
+            <li>
+                <a href="https://bibliotheques.paris.fr/donnees-personnelles.aspx">Données personnelles</a>
+            </li>
+            <li>
+                <a href="https://bibliotheques.paris.fr/plan-du-site.aspx">Plan du site</a>
+            </li>
         </ul>
     </div>
 </footer>
