Add: add book + aria label

--- a/book.html
+++ b/book.html
@@ -42,50 +42,83 @@
 </header>
 <main>
     <div>
-        <a href="/">
+        <a href="/" aria-label="Accueil">
             Accueil
         </a>
-        <a href="./resultat.html">> Recherche: Chaperon Rouge</a>
-        <p>> CHAPERON ROUGE - Danijel Žeželj </p>
+        <a href="./resultat.html" aria-label="Retour aux résultats de recherche">
+            > Recherche: Chaperon Rouge
+        </a>
+        <p>> CHAPERON ROUGE - Danijel Žeželj</p>
     </div>
     <section>
-        <a href="./resultat.html">Retour</a>
-        <h1>CHAPERON ROUGE - Danijel Žeželj></h1>
+        <a href="./resultat.html" aria-label="Retour à la page précédente">Retour</a>
+        <h1>CHAPERON ROUGE - Danijel Žeželj</h1>
     </section>
     <section>
         <div>
-            <img src="./images/chaperon.png" alt="Livre du chaperon rouge">
+            <img src="./images/chaperon.png" alt="Livre du Chaperon Rouge">
         </div>
         <div>
-            <p>Livre</p>
-            <h3>Résumé</h3>
-            <p> : A la demande de sa mère, le Petit Chaperon rouge porte une galette et un petit pot de beurre à sa grand-mère malade. En chemin, elle rencontre le loup. Une adaptation du conte classique illustrée à l'encre de Chine, et sans parole.</p>
-            <h3>Auteur</h3>
-            <p> : Danijel Žeželj (1966-....) </p>
-            <h3>Editeur</h3>
-            <p> : Mosquito</p>
-            <h3>Date</h3>
-            <p> : 2015</p>
-            <h3>Langue</h3>
-            <p> : Français (traduit du croate)</p>
-            <h3>Genre</h3>
-            <p> : Fiction, roman</p>
-            <h3>ISBN</h3>
-            <p> : 978-2-35283-290-4 </p>
-            <h3>Avis des lecteurs</h3>
-            <p> : 4,2/5 (17 avis)</p>
+            <p>Type : Livre</p>
+            <h2>Résumé</h2>
+            <p>A la demande de sa mère, le Petit Chaperon rouge porte une galette et un petit pot de beurre à sa grand-mère malade. En chemin, elle rencontre le loup. Une adaptation du conte classique illustrée à l'encre de Chine, et sans parole.</p>
+            <h2>Auteur</h2>
+            <p>Danijel Žeželj (1966-....)</p>
+            <h2>Éditeur</h2>
+            <p>Mosquito</p>
+            <h2>Date de publication</h2>
+            <p>2015</p>
+            <h2>Langue</h2>
+            <p>Français (traduit du croate)</p>
+            <h2>Genre</h2>
+            <p>Fiction, roman</p>
+            <h2>ISBN</h2>
+            <p>978-2-35283-290-4</p>
+            <h2>Avis des lecteurs</h2>
+            <p>4,2/5 (17 avis)</p>
         </div>
     </section>
     <section>
+        <h2>Dans quelle bibliothèque retrouver le livre ?</h2>
         <div>
-            <h2>Dans quelle bibliothèque retrouver le livre ?</h2>
+            <div>
+                <h3>Bibliothèque La Canopée - 75001</h3>
+                <p>Disponible</p>
+                <p>Niveau 2 - Jeunesse</p>
+                <button aria-label="Emprunter le livre à la Bibliothèque La Canopée">Emprunter le livre</button>
+            </div>
+            <div>
+                <h3>Bibliothèque Françoise Sagan - 75010</h3>
+                <p>Disponible</p>
+                <p>Niveau 1 - Jeunesse</p>
+                <button aria-label="Emprunter le livre à la Bibliothèque Françoise Sagan">Emprunter le livre</button>
+            </div>
+            <div>
+                <h3>Bibliothèque Violette Leduc - 75011</h3>
+                <p>Disponible</p>
+                <p>Niveau 3 - Jeunesse</p>
+                <button aria-label="Emprunter le livre à la Bibliothèque Violette Leduc">Emprunter le livre</button>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2>Comment se procurer le livre ?</h2>
+        <div>
+            <h3>Directement en bibliothèque</h3>
+            <p>Consulter les disponibilités de l’ouvrage dans les différentes bibliothèques de Paris et rendez vous dans l’une des bibliothèques pour faire votre demande.</p>
+        </div>
+        <div>
+            <h3>Réserver votre exemplaire en ligne</h3>
+            <p>Réserver à l’avance et aller récupérer votre ouvrage dans la bibliothèque sélectionnée par vos soins.</p>
+            <p>*Pour réserver un exemplaire, il est nécessaire d'être authentifié. Les réservations dépendent de votre abonnement en cours.</p>
+            <button aria-label="Se connecter pour réserver un exemplaire">Me connecter à mon compte</button>
         </div>
     </section>
     <section>
         <h2>Suggestions</h2>
-        <p>Du même auteur</p>
+        <h3>Du même auteur</h3>
         <a href="/">
-            <img alt="Livre du chaperon rouge" src="./images/chaperon.png">
+            <img alt="Livre du Chaperon Rouge" src="./images/chaperon.png">
             <div>
                 <div>
                     <span>Livre</span>
